--- a/wishlist/templates/register.html
+++ b/wishlist/templates/register.html
@@ -8,17 +8,17 @@
 
 <div class = "login">
     
-    <h1>Formulir Registrasi</h1>  
+    <h1 id="head">Formulir Registrasi</h1>  
 
         <form method="POST" >  
             {% csrf_token %}  
             <table>  
                 {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
             </table>  
+            <br>
+                <a id ="button-register" href="{% url 'wishlist:login' %}">Kembali</a>
+                <td><input type="submit" name="submit" value="Daftar" id="button-register"/></td>  
+            </br>
         </form>
 
     {% if messages %}  
