--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,25 +1,37 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h5>Nama: </h5>
-<p>{{nama}}</p>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      </div>
+      <ul class="nav navbar-nav">
+        <li><h5>{{nama}}</h5></li>
+        <li><a href="{% url 'wishlist:logout' %}">Logout</a></li>
+      </ul>
+    </div>
+  </nav>
 
-<table>
-    <tr>
-    <th>Nama Barang</th>
-    <th>Harga Barang</th>
-    <th>Deskripsi</th>
-    </tr>
-    {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
-    {% for barang in list_barang %}
-    <tr>
-        <th>{{barang.nama_barang}}</th>
-        <th>{{barang.harga_barang}}</th>
-        <th>{{barang.deskripsi}}</th>
-    </tr>
-{% endfor %}
-</table>
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-<button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
+<div class="wishlist">
+    <h5>Nama: </h5>
+    <p>{{nama}}</p>
+
+    <table>
+        <tr>
+        <th>Nama Barang</th>
+        <th>Harga Barang</th>
+        <th>Deskripsi</th>
+        </tr>
+        {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+        {% for barang in list_barang %}
+        <tr>
+            <td>{{barang.nama_barang}}</d>
+            <td>{{barang.harga_barang}}</td>
+            <td>{{barang.deskripsi}}</td>
+        </tr>
+    {% endfor %}
+    </table>
+    <h5 id="cookies">Sesi terakhir login: {{ last_login }}</h5>
+    <a id="button-register" href="{% url 'wishlist:logout' %}">Logout</a>
+</div>
+
 
 {% endblock content %}
