--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -29,6 +29,7 @@
     </table>
     <h5 id="cookies">Sesi terakhir login: {{ last_login }}</h5>
     <a id="button-register" href="{% url 'wishlist:logout' %}">Logout</a>
+    <a id="button-register" href="{% url 'wishlist:wishlist_ajax' %}">Ajax Version</a>
 </div>
 
 
